package com.chatly.model.enums;

/**
 * Login slot: at most one active session per platform per user (WEB vs MOBILE).
 */
public enum ClientPlatform {
    WEB,
    MOBILE
}
