package com.chatly.model.enums;

public enum GroupRole {
    OWNER,
    ADMIN,
    MEMBER
}
