package com.chatly.model.enums;

public enum UserStatus {
    ONLINE,
    OFFLINE,
    AWAY
}
